# elixir_native_visualization

./: .gitignore  README.md  mix.exs
c_src/: CMakeLists.txt  Makefile  first_nif.cpp
c_src/inc/: AppThread.hpp  ApplicationWindow.hpp  Context.hpp  ErlContext.hpp  ErlResourcePtr.hpp  GraphicsContext.hpp
c_src/inc/gl/: Buffer.hpp  GLException.hpp  Program.hpp  Shader.hpp  VAO.hpp
c_src/src/: AppThread.cpp  ApplicationWindow.cpp  Context.cpp  ErlContext.cpp  GraphicsContext.cpp  first_nif.cpp
c_src/src/gl/: Buffer.cpp  GLException.cpp  Program.cpp  Shader.cpp  VAO.cpp
config/: config.exs
lib/: elixir_native_visualization.ex  nat_vis.ex
test/: elixir_native_visualization_test.exs  nat_vis_test.exs
